force-app/zurich-base/main/default/objects/WebServicesControl__mdt/WebServicesControl__mdt.object-meta.xml
<CustomObject>
    <label>WebServicesControl</label>
    <pluralLabel>WebServicesControls</pluralLabel>
</CustomObject>