force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/Array__c.field-meta.xml
<CustomField>
    <fullName>Array__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Array</label>
    <type>Checkbox</type>
</CustomField>