force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/Attachable__c.field-meta.xml
<CustomField>
    <fullName>Attachable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachable</label>
    <type>Checkbox</type>
</CustomField>