force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/AttributeName__c.field-meta.xml
<CustomField>
    <fullName>AttributeName__c</fullName>
    <label>AttributeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>