force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/EntityName__c.field-meta.xml
<CustomField>
    <fullName>EntityName__c</fullName>
    <label>EntityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>