force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External_Id</label>
    <type>Checkbox</type>
</CustomField>