force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/IgnoreErrors__c.field-meta.xml
<CustomField>
    <fullName>IgnoreErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IgnoreErrors</label>
    <type>Checkbox</type>
</CustomField>