force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/Nested__c.field-meta.xml
<CustomField>
    <fullName>Nested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nested</label>
    <type>Checkbox</type>
</CustomField>