force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/Nullable__c.field-meta.xml
<CustomField>
    <fullName>Nullable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nullable</label>
    <type>Checkbox</type>
</CustomField>