force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Object</label>
    <type>Checkbox</type>
</CustomField>