force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/PicklistAttributesName__c.field-meta.xml
<CustomField>
    <fullName>PicklistAttributesName__c</fullName>
    <label>PicklistAttributesName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>