force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>PicklistValues__c</fullName>
    <label>PicklistValues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>