force-app/zurich-base/main/default/objects/WebServicesControl__mdt/fields/RelatedObjectType__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectType__c</fullName>
    <label>RelatedObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>