force-app/zurich-base/main/default/objects/WebServicesControl__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Source__c</columns>
    <columns>EntityName__c</columns>
    <columns>AttributeName__c</columns>
    <columns>Object__c</columns>
    <columns>FieldName__c</columns>
    <columns>Required__c</columns>
    <columns>External_Id__c</columns>
    <columns>IgnoreErrors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>